--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - BACKEND_PORT=${BACKEND_PORT:-8000}           
     volumes:
       - ./output/frontend:/app/data
-      - ./pb_data:/app/pb/pb_data
+      - pb_data:/app/pb/pb_data
     ports:
       - "${PORT}:8090"
   itb-api:
@@ -25,7 +25,10 @@ services:
       - API_TEMPLATE_OUTPUT_PATH=${API_TEMPLATE_OUTPUT_PATH:-output/templates}
     ports:
       - "${API_PORT:-8000}:8000"
-  
+
+volumes:
+  pb_data:
+
 networks:
   default:
     name: itb
